# tock

./: Cargo.toml
boards/nucleo_h755zi/: Cargo.toml
boards/nucleo_h755zi/src/: main.rs
chips/stm32h755zi/: Cargo.toml
chips/stm32h755zi/src/: chip_specs.rs  lib.rs  stm32f429zi_nvic.rs  trng_registers.rs
chips/stm32h7xx/: Cargo.toml
chips/stm32h7xx/src/: dma.rs  gpio.rs
