# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "stm32h755zi"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
cortexm7 = { path = "../../arch/cortex-m7" }
kernel = { path = "../../kernel" }
stm32h7xx = { path = "../stm32h7xx", features = ["stm32h755"] }
enum_primitive = { path = "../../libraries/enum_primitive" }

[lints]
workspace = true
